--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Code for lecture 7 including node.js, express server handling, MySQL, relational db's and more",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/express.js",
+    "dev": "nodemon server/express.js"
   },
   "repository": {
     "type": "git",
@@ -13,7 +15,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/OLspectre/lecture_7/issues"
   },
@@ -22,5 +24,8 @@
     "express": "^5.1.0",
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.11"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3"
   }
 }
