Created IIFE to start server via app.js. Also checks if db-connection is good. It will most likely always be but...

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/express.js",
-    "dev": "nodemon server/express.js"
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
